# Discrete-Mathematics---Final

./: .gitignore  CMakeLists.txt  main.cpp
